<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/paddingTop"
        android:paddingLeft="@dimen/paddingLeft"
        android:paddingBottom="@dimen/paddingBottom"
        android:paddingRight="@dimen/paddingRight">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/intNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtnombre"
                android:maxLines="1"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/intFechaNac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtfechaNac"
                android:inputType="date"
                android:focusable="false"
                android:clickable="true"
                android:maxLines="1"
                android:onClick="showDatePickerDialog"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/intTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txttelefono"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/intEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtemail"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/intDescripcion"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_height"
                android:hint="@string/txtdescripcion"
                />
        </android.support.design.widget.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/btnSiguiente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnsiguiente"
                android:layout_gravity="bottom"
                android:theme="@style/MiBotonRaised"/>
        </LinearLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>



